Sema: Teach rethrows checking about OtherConstructorDeclRefExpr

Fixes <https://bugs.swift.org/browse/SR-8788>.